# smartCalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SmartCalculator.cpp  SmartCalculator.sln  SmartCalculator.vcxproj  buildsteps.sh  main.cpp
.github/workflows/: codeql.yml
SmartCalculator/x64/Release/: Project1.exe.recipe  Project1.ipdb
SmartCalculator/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.read.1.tlog
calc/: GraphingCalculator.cpp  GraphingCalculator.h  SmartCalculator.cpp  SmartCalculator.h  main.cpp
legacy/: oldREADME.md
legacy/smartCalc/: SmartCalculator.filters
legacy/smartCalc/SmartCalculator/x64/Release/: Project1.vcxproj.FileListAbsolute.txt
legacy/smartCalc/SmartCalculator/x64/Release/Project1.tlog/: Project1.write.1u.tlog  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
legacy/smartCalc/src/: GraphPanel.cpp  GraphPanel.h  SmartCalculator.h
qt/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
src/: SmartCalculator.cpp  SmartCalculator.h  main.cpp
